<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homepage_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginBottom="6dp"
                android:layout_weight="1"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:text="@string/newArrival"
                android:textColor="@color/titleTextColor"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/addNewProduct"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_add_black_24dp"
                android:tint="@color/commentTextColor" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvHome1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/light_grey"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="6dp"

            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:text="@string/category2"
            android:textColor="@color/titleTextColor"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <RelativeLayout
                android:id="@+id/category_electronic_accessories"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/category_electronic_accessories_1"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/ic_electronic_acc" />

                <TextView
                    android:id="@+id/category_electronic_accessories_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/electronicAccessories"
                    android:textAlignment="center" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/category_automotive"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/category_automotive_1"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/ic_automotive" />

                <TextView
                    android:id="@+id/category_automotive_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/automotive"
                    android:textAlignment="center" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/category_electronic_devices"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/category_electronic_devices_1"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/ic_electronics" />

                <TextView
                    android:id="@+id/category_electronic_devices_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/electronicDevices"
                    android:textAlignment="center" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <RelativeLayout
                android:id="@+id/category_home_lifestyle"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/category_home_lifestyle_1"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/ic_home_lifestyle" />

                <TextView
                    android:id="@+id/category_home_lifestyle_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/homeLifestyle"
                    android:textAlignment="center" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/category_home_appliance"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/category_home_appliance_1"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/ic_appliance" />

                <TextView
                    android:id="@+id/category_home_appliance_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/homeAppliance"
                    android:textAlignment="center" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/category_health_and_beauty"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/category_health_and_beauty_1"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/ic_beauty" />

                <TextView
                    android:id="@+id/category_health_and_beauty_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/healthBeauty"
                    android:textAlignment="center" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <RelativeLayout
                android:id="@+id/category_baby_and_toy"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/category_baby_and_toy_1"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/ic_toy" />

                <TextView
                    android:id="@+id/category_baby_and_toy_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/babyToy"
                    android:textAlignment="center" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/category_grocery_pets"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/category_grocery_pets_1"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/ic_grocery"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/category_grocery_pets_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/groceriesPets"
                    android:textAlignment="center" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/category_women_fashion"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/category_women_fashion_1"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/ic_women" />

                <TextView
                    android:id="@+id/category_women_fashion_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/womenFashion"
                    android:textAlignment="center" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <RelativeLayout
                android:id="@+id/category_men_fashion"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/category_men_fashion_1"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/ic_man" />

                <TextView
                    android:id="@+id/category_men_fashion_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/manFashion"
                    android:textAlignment="center" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/category_fashion_accessories"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/category_fashion_accessories_1"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/ic_shoe" />

                <TextView
                    android:id="@+id/category_fashion_accessories_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/fashionAccessories"
                    android:textAlignment="center" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/category_sports_and_travel"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/category_sports_and_travel_1"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/ic_travel" />

                <TextView
                    android:id="@+id/category_sports_and_travel_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/sportTravel"
                    android:textAlignment="center" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>


</ScrollView>