<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/cartRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/line_below_shopping_cart_reycleview">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/shoppingCartRecycleView"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:scrollbars="vertical" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <View
            android:id="@+id/line_below_shopping_cart_reycleview"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_above="@id/cartManageBar"
            android:layout_marginTop="1dp"
            android:background="@color/colorLightGray" />

        <RelativeLayout
            android:id="@+id/cartManageBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/finalChkOutBtn">

            <CheckBox
                android:id="@+id/shopCartSelectAllChkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/shopCartSelectAllChkBox"
                android:text="@string/selectall"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/subTotalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/subTotal"
                android:text="@string/subtotal"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/subTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:text="0.00"
                android:textColor="@color/red"
                android:textSize="18sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/finalChkOutBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/orange"
            android:text="@string/checkstockavl"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/shopCartEmptyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/emptyList"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/shopCartEmptyImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/shopCartEmptyText"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_empty"
            android:visibility="invisible" />

    </RelativeLayout>

</FrameLayout>
