<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/cardviewsocial"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@drawable/postborder"
    android:padding="5dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="5dp"
        card_view:contentPadding="2dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/post_profile_pic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                app:srcCompat="@drawable/ic_person_black_24dp" />

            <TextView
                android:id="@+id/post_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_toRightOf="@+id/post_profile_pic"
                android:text="TextView"
                android:textColor="@color/commentTextColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/post_date"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@+id/post_user_name"
                android:layout_alignParentRight="true"
                android:layout_marginTop="4dp"
                android:layout_marginRight="10dp"
                android:text="TextView" />

            <ImageView
                android:id="@+id/post_pic"
                android:layout_width="290dp"
                android:layout_height="187dp"
                android:layout_below="@+id/post_date"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/ic_photo_black_24dp" />

            <Button
                android:id="@+id/like_button"
                style="@style/com_facebook_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/totalLikes"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/like" />

            <Button
                android:id="@+id/comment_button"
                style="@style/com_facebook_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/totalLikes"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/comment" />

            <Button
                android:id="@+id/share_button"
                style="@style/com_facebook_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/totalLikes"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:text="@string/share" />

            <TextView
                android:id="@+id/post_content"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/post_pic"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:singleLine="true"
                android:text="TextView"
                android:textColor="@color/commentTextColor" />

            <TextView
                android:id="@+id/post_see_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/post_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="3dp"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/see_more" />

            <TextView
                android:id="@+id/totalLikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/post_see_more"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:text="Likes" />

            <TextView
                android:id="@+id/totalComments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/post_see_more"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/totalLikes"
                android:text="Comments" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>